--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
     <link href="//fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
 
+    <link rel="stylesheet" href="extras/highlight/styles/github.css">
+
     <!--
         
         Impress.js doesn't depend on any external stylesheets. It adds all of the styles it needs for the
@@ -185,10 +187,40 @@
     </div>
 
     <div class="title step" data-x="0" data-y="0" data-scale="4">
-      <h1>Abstractions</h1>
+      <h1>How it works</h1>
     </div>
 
     <div class="step slide" data-x="-2000" data-y="1500">
+        <strong>Etcd</strong> <br/>
+        <q>This is simply a key value store that persists the desired state.</q>
+    </div>
+
+    <div class="step slide" data-x="-1000" data-y="1500">
+        <strong>Controller Manager</strong> <br/>
+        <q>This is a control loop that watches the actual state and works to get it to match the desired state.</q>
+    </div>
+
+    <div class="step slide" data-x="0" data-y="1500">
+        <strong>Scheduler</strong> <br/>
+        <q>This component uses various configurations and live metrics to determine the best place to place a pod.</q><br/>
+        <a href="https://tetris.com/play-tetris">Scheduler Example</a>
+    </div>
+
+    <div class="step slide" data-x="1000" data-y="1500">
+        <strong>API Server</strong> <br/>
+        <q>This is how most of the communication happens between clients.</q>
+    </div>
+
+    <div class="step slide" data-x="2000" data-y="1500">
+        <strong>DNS</strong> <br/>
+        <q>This is how service names are able to resolve to pods.</q>
+    </div>
+
+    <div class="title step" data-x="0" data-y="3000" data-scale="4">
+      <h1>Abstractions</h1>
+    </div>
+
+    <div class="step slide" data-x="-2000" data-y="4500">
         <strong>Cluster</strong> <br/>
         <q>This is the highest-level abstraction and refers to all of the machines running K8. Clusters can be Federated to support a multi cloud architecture.</q><br/>
         <ul>
@@ -197,7 +229,7 @@
         </ul>
     </div>
 
-    <div class="step slide" data-x="-1000" data-y="1500">
+    <div class="step slide" data-x="-1000" data-y="4500">
         <strong>Namespaces</strong> <br/>
         <q>These are separate environments or ecosystems within the same cluster.</q><br/>
         <ul>
@@ -206,61 +238,100 @@
         </ul>
     </div>
 
-    <div class="step slide" data-x="0" data-y="1500">
-        <strong>Controllers</strong> <br/>
-        <q>Further abstractions to represent the type of things you can run on K8.</q><br/>
-        <ul>
-          <li>Deployments</li>
-          <li>Replica Sets</li>
-          <li>Jobs</li>
-          <li>Stateful Sets</li>
-          <li>Daemon Sets</li>
-          <li>Persistent Volumes</li>
-        </ul>
-    </div>
-
-    <div class="step slide" data-x="1000" data-y="1500">
+    <div class="step slide" data-x="0" data-y="4500">
         <strong>Pods</strong> <br/>
         <q>A grouping of one or more containers that make up an application. These are groupings that you would want to be able to horizontally scale.</q>
     </div>
 
-    <div class="step slide" data-x="2000" data-y="1500">
+    <div class="step slide" data-x="1000" data-y="4500">
         <strong>Containers</strong> <br/>
         <q>The lowest-level abstraction. This is usually an immutable image containing the code that does one thing really well, but doesn't need to scale independently.</q>
     </div>
 
-    <div class="title step" data-x="0" data-y="3000" data-scale="4">
-      <h1>How it works</h1>
-    </div>
-
-    <div class="step slide" data-x="-2000" data-y="4500">
-        <strong>Etcd</strong> <br/>
-        <q>This is simply a key value store that persists the desired state.</q>
-    </div>
-
-    <div class="step slide" data-x="-1000" data-y="4500">
-        <strong>Controller Manager</strong> <br/>
-        <q>This is a control loop that watches the actual state and works to get it to match the desired state.</q>
-    </div>
-
-    <div class="step slide" data-x="0" data-y="4500">
-        <strong>Scheduler</strong> <br/>
-        <q>This component uses various configurations and live metrics to determine the best place to place a pod.</q><br/>
-        <a href="https://tetris.com/play-tetris">Scheduler Example</a>
-    </div>
-
-    <div class="step slide" data-x="1000" data-y="4500">
-        <strong>API Server</strong> <br/>
-        <q>This is how most of the communication happens between clients.</q>
-    </div>
-
     <div class="step slide" data-x="2000" data-y="4500">
-        <strong>DNS</strong> <br/>
-        <q>This is how service names are able to resolve to pods.</q>
+        <strong>Controllers</strong> <br/>
+        <q>Further abstractions to represent the type of things you can run on K8.</q><br/>
+        <ul>
+          <li>Deployments</li>
+          <li>Jobs</li>
+          <li>Cron Jobs</li>
+          <li>Stateful Sets</li>
+          <li>Daemon Sets</li>
+        </ul>
     </div>
 
-    <div id="tiny" class="step" data-x="2825" data-y="2325" data-z="-3000" data-rotate="300" data-scale="1">
-        <p>and <b>tiny</b> ideas</p>
+    <div class="step slide" data-x="3000" data-y="4500">
+        <strong>Networking</strong> <br/>
+        <q>K8 handles service discovery, load balancing, and networking for us.</q><br/>
+        <ul>
+          <li>Services</li>
+          <li>DNS</li>
+          <li>Ingress</li>
+          <li>Network Policies</li>
+        </ul>
+    </div>
+
+    <div class="step slide" data-x="4000" data-y="4500">
+        <strong>Storage</strong> <br/>
+        <q>In general, you want to keep your containers stateless, but when you do need persistance there's a thing for it.</q><br/>
+        <ul>
+          <li>Persistent Volumes</li>
+          <li>Persistent Volume Claims</li>
+        </ul>
+    </div>
+
+    <div class="title step" data-x="0" data-y="6000" data-scale="4">
+      <h1>Examples YAY!</h1>
+    </div>
+
+    <div class="step slide" data-x="-2000" data-y="7500">
+        <strong>Deployments</strong> <br/>
+        <q>A way to manage replica sets or a given number of pod replicas.</q>
+    </div>
+
+    <div class="step slide" data-x="-1000" data-y="7500">
+        <strong>Deployments</strong> <br/>
+        <pre>
+          <code>
+						apiVersion: apps/v1
+						kind: Deployment
+						metadata:
+							name: impress-deployment
+							labels:
+								app: impress
+						spec:
+							replicas: 3
+							selector:
+								matchLabels:
+									app: impress
+							template:
+								metadata:
+									labels:
+										app: impress
+								spec:
+									containers:
+									- name: devin-test
+										image: devinburnette/devin-test:latest
+										ports:
+										- containerPort: 80 
+          </code>
+        </pre>
+    </div>
+
+    <div class="step slide" data-x="0" data-y="7500">
+        <strong>Jobs</strong> <br/>
+    </div>
+
+    <div class="step slide" data-x="1000" data-y="7500">
+        <strong>Cron Jobs</strong> <br/>
+    </div>
+
+    <div class="step slide" data-x="2000" data-y="7500">
+        <strong>Stateful Sets</strong> <br/>
+    </div>
+
+    <div class="step slide" data-x="3000" data-y="7500">
+        <strong>Daemon Sets</strong> <br/>
     </div>
 
     <!--
@@ -356,6 +427,8 @@ if ("ontouchstart" in document.documentElement) {
     Of course you can wrap it in any kind of "DOM ready" event, but I was too lazy to do so ;)
     
 -->
+<script type="text/javascript" src="extras/highlight/highlight.pack.js"></script>
+
 <script src="js/impress.js"></script>
 <script>impress().init();</script>
 
