yet more progress

--- a/index.html
+++ b/index.html
@@ -289,10 +289,10 @@
         <q>A way to manage replica sets or a given number of pod replicas.</q>
     </div>
 
-    <div class="step slide" data-x="-1000" data-y="7500">
+    <div class="step slide" data-x="-1000" data-y="7500" style="height: 1000px;">
         <strong>Deployments</strong> <br/>
         <pre>
-          <code>
+          <code style="font-size: 18px;">
 						apiVersion: apps/v1
 						kind: Deployment
 						metadata:
